--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-scripts": "0.9.5"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
